# gym-management-system

./: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  routes.py
frontend/: app.js  index.html
