[project]
name = "gym-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "psycopg2>=2.9.12",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]
